notebook to do basic reductions of kriz dta

--- a/notebooks_for_development/plot_time_series_w_binning.ipynb
+++ b/notebooks_for_development/plot_time_series_w_binning.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "87ccf743",
+   "execution_count": 1,
+   "id": "b1ba685b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "61dc6343",
+   "id": "cf1c6433",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1bb4493b",
+   "id": "f1546b72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +39,10 @@
     "# detrended_photom_0pt97_variance_0pt01_off_center_transit_1_col_star.csv\n",
     "# detrended_photom_0pt85_variance_0pt01_off_center_transit_1_col_star.csv\n",
     "# detrended_photom_0pt90_variance_0pt01_off_center_transit_1_col_star.csv\n",
+    "# detrended_photom_0pt98_variance_0pt01_off_center_transit_24_col_star.csv\n",
+    "# detrended_photom_0pt90_variance_0pt01_off_center_transit_24_col_star.csv\n",
     "\n",
-    "photometry_df = pd.read_csv(\"../detrended_photom_0pt85_variance_0pt01_off_center_transit_1_col_star.csv\", \n",
+    "photometry_df = pd.read_csv(\"../junk.csv\", \n",
     "                            index_col=\"Unnamed: 0\")\n",
     "\n",
     "# read in data with JD info and concatenate to photometry\n",
@@ -51,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "52324c60",
+   "id": "1513afd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8970c8df",
+   "id": "a94a3810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8bc7c0b4",
+   "id": "66adb13e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,8 +102,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "38abbf12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make new array of means and error bars (FOR COMPARISON STAR PHOTOMETRY)\n",
+    "binned_photometry = []\n",
+    "binned_photometry_error_bars = []\n",
+    "\n",
+    "diff_photometry = np.divide(photometry_df[\"1\"],photometry_df[\"55\"])\n",
+    "\n",
+    "for t in range(0,len(bin_labels)):\n",
+    "    \n",
+    "    # extract the datapoints corresponding to that value\n",
+    "    photometry_this_bin = diff_photometry.where(photometry_df[\"time_bin\"] == bin_labels[t]).dropna()\n",
+    "    \n",
+    "    binned_photometry.append(np.mean(photometry_this_bin))\n",
+    "    binned_photometry_error_bars.append(error_bar_noise(photometry_this_bin))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5ba18175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot (FOR COMPARISON STAR PHOTOMETRY)\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.clf()\n",
+    "plt.scatter(photometry_df[\"jd-2459431\"],diff_photometry,s=2,alpha=0.5)\n",
+    "plt.errorbar(bin_centers,binned_photometry,yerr=binned_photometry_error_bars,linestyle=\"\",ecolor=\"k\",capsize=5)\n",
+    "#plt.ylim([7180,7280])\n",
+    "plt.xlabel(\"JD-2459431\")\n",
+    "plt.show()\n",
+    "#plt.savefig(\"junk.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "id": "7d1265ee",
+   "id": "7f814b47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,11 +160,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "77545e2c",
+   "id": "98d1a064",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make new array of means and error bars\n",
+    "# make new array of means and error bars (FOR SINGLE PHOTOMETRY)\n",
+    "'''\n",
     "binned_photometry = []\n",
     "binned_photometry_error_bars = []\n",
     "\n",
@@ -130,36 +175,18 @@
     "    photometry_this_bin = photometry_df[col_of_choice].where(photometry_df[\"time_bin\"] == bin_labels[t]).dropna()\n",
     "    \n",
     "    binned_photometry.append(np.mean(photometry_this_bin))\n",
-    "    binned_photometry_error_bars.append(error_bar_noise(photometry_this_bin))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "7735b6e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-19-3611a39e7232>:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  plt.plot(photometry_df.median(axis=0))\n"
-     ]
-    }
-   ],
-   "source": [
-    "plt.plot(photometry_df.median(axis=0))\n",
-    "plt.show()"
+    "    binned_photometry_error_bars.append(error_bar_noise(photometry_this_bin))\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a42be78b",
+   "id": "7b30cb13",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# plot (FOR SINGLE PHOTOMETRY)\n",
     "plt.clf()\n",
     "plt.scatter(photometry_df[\"jd-2459431\"],photometry_df[col_of_choice],s=2,alpha=0.5)\n",
     "plt.errorbar(bin_centers,binned_photometry,yerr=binned_photometry_error_bars,linestyle=\"\",ecolor=\"k\",capsize=5)\n",
@@ -172,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "d324ecc8",
+   "id": "f416def4",
    "metadata": {},
    "outputs": [
     {
